solved gcolab tesseract bug

--- a/ocr_extraction.ipynb
+++ b/ocr_extraction.ipynb
@@ -24,13 +24,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "85b-dKgW9cHt",
-        "outputId": "65ae2682-aa51-42d1-a581-ec2397b55219"
+        "outputId": "31282831-0308-4ec9-846d-4efb0f4afef0"
       },
       "source": [
         "!chmod +x isp.sh\n",
         "!./isp.sh"
       ],
-      "execution_count": 1,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,20 +113,20 @@
             "Cannot add PPA: 'ppa:~alx-p/ubuntu/tesseract-ocr'.\n",
             "ERROR: '~alx-p' user or team does not exist.\n",
             "Finished installing requirements for tesseract-ocr ...!\n",
-            "Hit:1 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease\n",
-            "Ign:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
-            "Ign:3 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
-            "Hit:4 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release\n",
+            "Ign:1 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
+            "Ign:2 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
+            "Hit:3 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release\n",
+            "Hit:4 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease\n",
             "Hit:5 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
-            "Hit:7 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
-            "Hit:8 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease\n",
-            "Hit:10 http://security.ubuntu.com/ubuntu bionic-security InRelease\n",
+            "Get:7 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
+            "Hit:8 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
+            "Hit:9 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease\n",
             "Get:11 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
             "Hit:12 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
             "Hit:13 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease\n",
             "Get:14 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
             "Hit:15 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
-            "Fetched 163 kB in 1s (141 kB/s)\n",
+            "Fetched 252 kB in 1s (221 kB/s)\n",
             "Reading package lists... Done\n",
             "Finished updating sys!\n",
             "Reading package lists... Done\n",
@@ -146,7 +146,26 @@
             "  libnvidia-common-460\n",
             "Use 'sudo apt autoremove' to remove it.\n",
             "0 upgraded, 0 newly installed, 0 to remove and 49 not upgraded.\n",
-            "Finished installing dev packages for tesseract-ocr\n"
+            "Finished installing dev packages for tesseract-ocr\n",
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "tesseract-ocr-ara is already the newest version (4.00~git24-0e00fe6-1.2).\n",
+            "The following package was automatically installed and is no longer required:\n",
+            "  libnvidia-common-460\n",
+            "Use 'sudo apt autoremove' to remove it.\n",
+            "0 upgraded, 0 newly installed, 0 to remove and 49 not upgraded.\n",
+            "Finished istalling arabic language package!\n",
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "The following packages will be REMOVED:\n",
+            "  libnvidia-common-460\n",
+            "0 upgraded, 0 newly installed, 1 to remove and 49 not upgraded.\n",
+            "After this operation, 35.8 kB disk space will be freed.\n",
+            "(Reading database ... 148648 files and directories currently installed.)\n",
+            "Removing libnvidia-common-460 (460.91.03-0ubuntu1) ...\n",
+            "Finished removing!\n"
           ],
           "name": "stdout"
         }
@@ -163,7 +182,7 @@
         "import pandas as pd\n",
         "from PIL import Image"
       ],
-      "execution_count": 2,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -176,127 +195,8 @@
         "t = []\n",
         "path_dir = r'./img/'"
       ],
-      "execution_count": 3,
+      "execution_count": 31,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GDDQbpmexbgw",
-        "outputId": "a1d2d41c-d004-4695-bed3-fc49a12388a8"
-      },
-      "source": [
-        "!wget https://github.com/tesseract-ocr/tessdata/raw/master/ara.traineddata"
-      ],
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "--2021-08-17 06:26:02--  https://github.com/tesseract-ocr/tessdata/raw/master/ara.traineddata\n",
-            "Resolving github.com (github.com)... 140.82.114.3\n",
-            "Connecting to github.com (github.com)|140.82.114.3|:443... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://raw.githubusercontent.com/tesseract-ocr/tessdata/master/ara.traineddata [following]\n",
-            "--2021-08-17 06:26:03--  https://raw.githubusercontent.com/tesseract-ocr/tessdata/master/ara.traineddata\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 2494806 (2.4M) [application/octet-stream]\n",
-            "Saving to: ‘ara.traineddata’\n",
-            "\n",
-            "ara.traineddata     100%[===================>]   2.38M  --.-KB/s    in 0.05s   \n",
-            "\n",
-            "2021-08-17 06:26:04 (48.4 MB/s) - ‘ara.traineddata’ saved [2494806/2494806]\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8GEvZke7xeno",
-        "outputId": "e3ba806f-a150-4de1-85d9-ccc4f57413b3"
-      },
-      "source": [
-        "!sudo mv -v ara.traineddata /usr/local/share/tessdata/"
-      ],
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "renamed 'ara.traineddata' -> '/usr/local/share/tessdata/ara.traineddata'\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "tZpKsoHxyVcH"
-      },
-      "source": [
-        "!export TESSDATA_PREFIX='/usr/local/share/'"
-      ],
-      "execution_count": 22,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "vWs8VdCEyoVX",
-        "outputId": "02498a88-7075-48e8-bc40-8987d894b418"
-      },
-      "source": [
-        "!sudo apt-get install tesseract-ocr-ara"
-      ],
-      "execution_count": 24,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Reading package lists... Done\n",
-            "Building dependency tree       \n",
-            "Reading state information... Done\n",
-            "The following package was automatically installed and is no longer required:\n",
-            "  libnvidia-common-460\n",
-            "Use 'sudo apt autoremove' to remove it.\n",
-            "The following NEW packages will be installed:\n",
-            "  tesseract-ocr-ara\n",
-            "0 upgraded, 1 newly installed, 0 to remove and 49 not upgraded.\n",
-            "Need to get 644 kB of archives.\n",
-            "After this operation, 1,447 kB of additional disk space will be used.\n",
-            "Get:1 http://archive.ubuntu.com/ubuntu bionic/universe amd64 tesseract-ocr-ara all 4.00~git24-0e00fe6-1.2 [644 kB]\n",
-            "Fetched 644 kB in 1s (549 kB/s)\n",
-            "debconf: unable to initialize frontend: Dialog\n",
-            "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 76, <> line 1.)\n",
-            "debconf: falling back to frontend: Readline\n",
-            "debconf: unable to initialize frontend: Readline\n",
-            "debconf: (This frontend requires a controlling tty.)\n",
-            "debconf: falling back to frontend: Teletype\n",
-            "dpkg-preconfigure: unable to re-open stdin: \n",
-            "Selecting previously unselected package tesseract-ocr-ara.\n",
-            "(Reading database ... 148644 files and directories currently installed.)\n",
-            "Preparing to unpack .../tesseract-ocr-ara_4.00~git24-0e00fe6-1.2_all.deb ...\n",
-            "Unpacking tesseract-ocr-ara (4.00~git24-0e00fe6-1.2) ...\n",
-            "Setting up tesseract-ocr-ara (4.00~git24-0e00fe6-1.2) ...\n"
-          ],
-          "name": "stdout"
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -305,7 +205,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DkF02E_T_YuU",
-        "outputId": "c343850f-fb6c-4fb5-85b7-9acfe03eab29"
+        "outputId": "19d55138-a0a0-4fec-f82d-8adebc2e59ea"
       },
       "source": [
         "for root, dirs, filenames in os.walk(path_dir):\n",
@@ -322,7 +222,7 @@
         "    except Exception as e:\n",
         "      print(e)"
       ],
-      "execution_count": 25,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -351,7 +251,7 @@
         "df = pd.DataFrame(list(zip(f, t)),columns=['img','text'])\n",
         "df.to_csv('cleaned_text.csv', index=False)"
       ],
-      "execution_count": 26,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -362,12 +262,12 @@
           "height": 204
         },
         "id": "mWMQwolQ_ehY",
-        "outputId": "bfcb3204-19d9-4c13-d3c2-6c25a12fad5d"
+        "outputId": "0184c44d-9399-417b-81ab-752b692dddd4"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 27,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -438,7 +338,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 34
         }
       ]
     },
