working with opencv

--- a/ocr_extraction.ipynb
+++ b/ocr_extraction.ipynb
@@ -501,11 +501,11 @@
       "source": [
         "import os\n",
         "import cv2\n",
-        "import pytesseract\n",
         "import numpy as np\n",
         "import pandas as pd\n",
+        "import pytesseract as ts\n",
+        "\n",
         "from PIL import Image\n",
-        "from wand.image import Image as wi\n",
         "from google.colab.patches import cv2_imshow"
       ],
       "execution_count": 63,
@@ -575,7 +575,7 @@
         "  gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
         "  cv2_imshow(gray)\n",
         "  print('\\n')\n",
-        "  cv2.imwrite(os.path.join(dstpath, image),gray)"
+        "  cv2.imwrite(os.path.join(dstpath, image), gray)"
       ],
       "execution_count": 71,
       "outputs": [
